feat: добавлены parentId и FullResourceDTO :)