@@ -10,7 +10,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -20,29 +20,46 @@ public class SectionsServiceImpl implements SectionsService {
     final ResourceRepository resourceRepo;
     @Override
     public PlainSectionDTO getPlainSection(Long id) {
-        // если ресурса с таким id нет, то выкинется `NoSuchElementException`
         SectionEntity section = sectionRepo.findById(id).orElseThrow();
-        return new PlainSectionDTO(section.getTitle(), section.getId());
+        return new PlainSectionDTO(
+                section.getId(),
+                Optional.ofNullable(section.getParent()).map(SectionEntity::getId).orElse(null),
+                section.getTitle());
     }
 
     @Override
     public List<PlainSectionDTO> getPlainChildrenSections(Long id) {
         // если ресурса с таким id нет, то выкинется `NoSuchElementException`
         SectionEntity section = sectionRepo.findById(id).orElseThrow();
-        return section.getChildSections().stream().map(x -> new PlainSectionDTO(x.getTitle(), x.getId())).collect(Collectors.toList());
+        return section.getChildSections().stream()
+                .map(x -> new PlainSectionDTO(
+                        x.getId(),
+                        Optional.ofNullable(x.getParent()).map(SectionEntity::getId).orElse(null),
+                        x.getTitle()))
+                .toList();
     }
 
     @Override
     public List<PlainResourceDTO> getPlainChildrenResources(Long id) {
         // если ресурса с таким id нет, то выкинется `NoSuchElementException`
         SectionEntity section = sectionRepo.findById(id).orElseThrow();
-        return section.getResources().stream().map(x -> new PlainResourceDTO(x.getTitle(), x.getId())).collect(Collectors.toList());
+        return section.getResources().stream()
+                .map(x -> new PlainResourceDTO(
+                        x.getId(),
+                        Optional.ofNullable(x.getParent()).map(SectionEntity::getId).orElse(null),
+                        x.getTitle()))
+                .toList();
     }
 
     @Override
     public List<PlainSectionDTO> getPlainRootSections() {
         List<SectionEntity> rootSections = sectionRepo.getAllByParentIsNull();
-        return rootSections.stream().map(x -> new PlainSectionDTO(x.getTitle(), x.getId())).collect(Collectors.toList());
+        return rootSections.stream()
+                .map(x -> new PlainSectionDTO(
+                        x.getId(),
+                        Optional.ofNullable(x.getParent()).map(SectionEntity::getId).orElse(null),
+                        x.getTitle()))
+                .toList();
     }
 
 }
